font size changed

--- a/src/App.css
+++ b/src/App.css
@@ -155,7 +155,7 @@
 
   }
   .name{
-    font-size:xx-large ;
+    font-size:16px;
     margin-left: 20px;
     margin-top: -5px;
     font-weight: 50;
